generated/checkers/refine/KN-Integer-Overflow-c09d2eff-0/build_logs/syntax-repair-refine-2-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘{anonymous}::SAGenTestChecker::OrigIntInfo {anonymous}::SAGenTestChecker::getOriginalIntegerInfo(const clang::Expr*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:164:14: error: ‘CK_IntegralPromotion’ was not declared in this scope
  164 |         case CK_IntegralPromotion:
      |              ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isDirectWidenedUseTo64(const clang::Expr*, clang::ento::CheckerContext&, const clang::Stmt*&, const clang::Decl*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:289:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  289 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(PStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:382:11: warning: ISO C++ does not support ‘__int128’ for ‘L’ [-Wpedantic]
  382 |           __int128 L = LMax.isSigned() ? (__int128)LMax.getExtValue()
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:382:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  382 |           __int128 L = LMax.isSigned() ? (__int128)LMax.getExtValue()
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:383:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  383 |                                        : (__int128)LMax.getZExtValue();
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:384:11: warning: ISO C++ does not support ‘__int128’ for ‘R’ [-Wpedantic]
  384 |           __int128 R = RMax.isSigned() ? (__int128)RMax.getExtValue()
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:384:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  384 |           __int128 R = RMax.isSigned() ? (__int128)RMax.getExtValue()
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:385:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  385 |                                        : (__int128)RMax.getZExtValue();
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:386:11: warning: ISO C++ does not support ‘__int128’ for ‘S’ [-Wpedantic]
  386 |           __int128 S = BO->getOpcode() == BO_Add ? (L + R) : (L - R);
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:387:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  387 |           uint64_t UB = S < 0 ? 0 : (S > (__int128)UINT64_MAX ? UINT64_MAX : (uint64_t)S);
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeSizeContext(const clang::Stmt*, const clang::Decl*, const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:496:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  496 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeNonSizeEncodingContext(const clang::Stmt*, const clang::Decl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:545:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  545 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
